<resources>
    <string name="app_name">News Hunter</string>


    <string name="menu_calendar">캘린더</string>
    <string name="menu_newspid">뉴스피드</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="menu_category">카테고리</string>

    <string name="success_scrap">기사를 스크랩했습니다</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_password_confirm">Password Confirm</string>
    <string name="str_btn_login">로그인</string>
    <string name="str_btn_register">회원가입</string>
    <string name="str_btn_confirm">완료</string>
    <string name="str_url_backend">https://q491o8k8da.execute-api.ap-northeast-2.amazonaws.com/dev/</string>
    <string name="str_today_headline">오늘의 헤드라인</string>
    <string name="str_null_news">이날은 기사가 없어요</string>

    <string-array name="default_category">
        <item>정치</item>
        <item>사회</item>
        <item>경제</item>
        <item>국제</item>
        <item>스포츠</item>
        <item>과학</item>
        <item>연예</item>
        <item>예술</item>
        <item>라이프</item>

    </string-array>
    <string-array name="month_string">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>