<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="edu.skku.cs.mysimplecalendar.activity.login.LoginViewModel" />
        <import type="android.view.View"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.login.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_semibold"
            android:text="Welcome to \nNews Scrap Calendar!"
            android:textColor="@color/primaryText"
            android:layout_marginHorizontal="24dp"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_username"
                style='@style/style_login_field'
                android:hint="@string/str_username"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_password"
                style='@style/style_login_field'
                android:hint="@string/str_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:visibility="@{viewmodel.register() ? View.GONE : View.VISIBLE}" />

            <EditText
                android:id="@+id/et_password_register"
                style='@style/style_login_field'
                android:hint="@string/str_password"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:visibility="@{viewmodel.register() ? View.VISIBLE : View.GONE}" />

            <EditText
                android:id="@+id/et_password_confirm"
                style='@style/style_login_field'
                android:hint="@string/str_password_confirm"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:visibility="@{viewmodel.register() ? View.VISIBLE : View.GONE}" />
            <TextView
                android:id="@+id/btn_login"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="16dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_primary"
                android:fontFamily="@font/ibm_plex_sans_semibold"
                android:gravity="center"
                android:visibility="@{viewmodel.register() ? View.GONE : View.VISIBLE}"
                android:text="@string/str_btn_login"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/btn_register"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="16dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_primary"
                android:visibility="@{viewmodel.register() ? View.GONE : View.VISIBLE}"
                android:fontFamily="@font/ibm_plex_sans_semibold"
                android:gravity="center"
                android:text="@string/str_btn_register"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="16dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_primary"
                android:fontFamily="@font/ibm_plex_sans_semibold"
                android:gravity="center"
                android:text="@string/str_btn_confirm"
                android:textColor="@color/white"
                android:visibility="@{viewmodel.register() ? View.VISIBLE : View.GONE}"
                android:textSize="20sp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
